Replace New Integer() by Integer.valueOf()